--- a/app/views/admin/routes/_route.html.erb
+++ b/app/views/admin/routes/_route.html.erb
@@ -1,8 +1,14 @@
 <tr>
-  <td><%= route.name %></td>
+  <td>
+    <div id="route_name_<%= route.id %>">
+      <%= route.name %>
+    </div>
+    <%= render 'edit_name_form', route: route, hidden: true %>
+  </td>
+
   <td>
     <%= link_to 'Show', [:admin, route], class: 'btn btn-warning btn-sm' %> |
-    <%= link_to 'Edit',  edit_admin_route_path(route), class: 'btn btn-success btn-sm' %> |
+    <%= link_to 'Edit',  '', class: 'btn btn-success btn-sm edit_route', data: { route_id: route.id } %> |
     <%= link_to 'Destroy', [:admin, route], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' %>
   </td>
 </tr>
