--- a/app/views/admin/trains/_train.html.erb
+++ b/app/views/admin/trains/_train.html.erb
@@ -1,10 +1,15 @@
 <tr>
-  <td><%= train.number %></td>
+  <td>
+    <div id="train_number_<%= train.id %>">
+      <%= train.number %>
+    </div>
+    <%= render 'edit_number_form', train: train, hidden: true %>
+  </td>
   <td><%= train.route.name %></td>
   <td><%= train.current_station.title %></td>
   <td>
     <%= link_to 'Show', [:admin, train], class: 'btn btn-warning btn-sm' %> |
-    <%= link_to 'Edit', edit_admin_train_path(train), class: 'btn btn-success btn-sm' %> |
+    <%= link_to 'Edit', '', class: 'btn btn-success btn-sm edit_train', data: { train_id: train.id } %> |
     <%= link_to 'Destroy', [:admin, train], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' %>
   </td>
 </tr>
