--- a/app/views/admin/carriages/new.html.erb
+++ b/app/views/admin/carriages/new.html.erb
@@ -8,29 +8,29 @@
     <%= form.select :type, Carriage::TYPES, class: 'form-control' %>
   </div>
 
-  <div class="form-group">
+  <div class="form-group top-seats seats">
     <%= form.label :top_seats %>
-    <%= form.number_field :top_seats, min: 1, class: 'form-control' %>
+    <%= form.number_field :top_seats, min: 1, class: 'form-control seats_number' %>
   </div>
 
-  <div class="form-group">
+  <div class="form-group bottom-seats seats">
     <%= form.label :bottom_seats %>
-    <%= form.number_field :bottom_seats, min: 1, class: 'form-control' %>
+    <%= form.number_field :bottom_seats, min: 1, class: 'form-control seats_number' %>
   </div>
 
-  <div class="form-group">
+  <div class="form-group side-top-seats seats">
     <%= form.label :side_top_seats %>
-    <%= form.number_field :side_top_seats, min: 1, class: 'form-control' %>
+    <%= form.number_field :side_top_seats, min: 1, class: 'form-control seats_number' %>
   </div>
 
-  <div class="form-group">
+  <div class="form-group side-bottom-seats seats">
     <%= form.label :side_bottom_seats %>
-    <%= form.number_field :side_bottom_seats, min: 1, class: 'form-control' %>
+    <%= form.number_field :side_bottom_seats, min: 1, class: 'form-control seats_number' %>
   </div>
 
-  <div class="form-group">
+  <div class="form-group seat-seats seats">
     <%= form.label :seat_seats %>
-    <%= form.number_field :seat_seats, min: 1, class: 'form-control' %>
+    <%= form.number_field :seat_seats, min: 1, class: 'form-control seats_number' %>
   </div>
 
   <%= form.submit "#{ @carriage.new_record?  ? 'Create' : 'Update' }", class: 'btn btn-primary' %>
