--- a/app/views/admin/railway_stations/edit.html.erb
+++ b/app/views/admin/railway_stations/edit.html.erb
@@ -1,6 +1,6 @@
 <h1><%= t('.title') %></h1>
 
-<%= render 'form', railway_station: @railway_station %>
+<%= render 'form', railway_station: @railway_station, hidden: false %>
 
 </br>
 
