--- a/app/views/admin/routes/_edit_name_form.html.erb
+++ b/app/views/admin/routes/_edit_name_form.html.erb
@@ -1,14 +1,15 @@
 <div class="row">
   <div class="col-md-3">
-    <%= form_with(model: [:admin, route], url: update_name_admin_route_path(route),
-                  html: { style: "display: #{hidden ? 'none' : 'block'}", id: "edit_route_#{route.id}" },
-                  local: true) do |form| %>
+    <%= form_with(model: [:admin, route], html: { style: "display: #{hidden ? 'none' : 'block'}",
+                                                  id: "edit_route_#{route.id}" }, local: true) do |form| %>
       <%= render 'common/errors', resource: route %>
 
       <div class="form-group">
         <%= form.label :name %>
         <%= form.text_field :name, class: 'form-control' %>
       </div>
+
+      <%= form.hidden_field :name_only %>
 
       <%= form.submit 'Обновить название', class: 'btn btn-primary' %>
     <% end %>
