--- a/app/views/admin/trains/_edit_number_form.html.erb
+++ b/app/views/admin/trains/_edit_number_form.html.erb
@@ -1,14 +1,15 @@
 <div class="row">
   <div class="col-md-3">
-    <%= form_with(model: [:admin, train], url: update_number_admin_train_path(train),
-                  html: { style: "display: #{hidden ? 'none' : 'block'}", id: "edit_train_#{train.id}" },
-                  local: true) do |form| %>
+    <%= form_with(model: [:admin, train],html: { style: "display: #{hidden ? 'none' : 'block'}",
+                                                 id: "edit_train_#{train.id}" }, local: true) do |form| %>
       <%= render 'common/errors', resource: train %>
 
       <div class="form-group">
         <%= form.label :number %>
         <%= form.text_field :number, class: 'form-control' %>
       </div>
+
+      <%= form.hidden_field :number_only %>
 
       <%= form.submit 'Обновить название', class: 'btn btn-primary' %>
     <% end %>
