--- a/app/views/carriages/new.html.erb
+++ b/app/views/carriages/new.html.erb
@@ -5,7 +5,7 @@
 
   <div class="field">
     <%= form.label :type %>
-    <%= form.select :type, Carriage::TYPES %>
+    <%= form.select :type, Carriage::TYPES.values %>
   </div>
 
   <div class="field">
