--- a/app/views/admin/trains/show.html.erb
+++ b/app/views/admin/trains/show.html.erb
@@ -29,11 +29,11 @@
         <li class="list-group-item"><strong>Coupe Carriages:</strong></li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
           Top seats count:
-          <span class="badge badge-primary badge-pill"><%= @train.carriages.coupe.map(&:top_seats).inject(:+) %></span>
+          <span class="badge badge-primary badge-pill"><%= @train.carriages.seats_count(:coupe, :top_seats) %></span>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
           Bottom seats count:
-          <span class="badge badge-primary badge-pill"><%= @train.carriages.coupe.map(&:bottom_seats).inject(:+) %></span>
+          <span class="badge badge-primary badge-pill"><%= @train.carriages.seats_count(:coupe, :bottom_seats) %></span>
         </li>
       </ul>
     <% end %>
@@ -43,19 +43,19 @@
         <li class="list-group-item"><strong>Economy Carriages:</strong></li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
           Top seats count:
-          <span class="badge badge-primary badge-pill"><%= @train.carriages.economy.map(&:top_seats).inject(:+) %></span>
+          <span class="badge badge-primary badge-pill"><%= @train.carriages.seats_count(:economy, :top_seats) %></span>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
           Bottom seats count:
-          <span class="badge badge-primary badge-pill"><%= @train.carriages.economy.map(&:bottom_seats).inject(:+) %></span>
+          <span class="badge badge-primary badge-pill"><%= @train.carriages.seats_count(:economy, :bottom_seats) %></span>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
           Side top seats count:
-          <span class="badge badge-primary badge-pill"><%= @train.carriages.economy.map(&:side_top_seats).inject(:+) %></span>
+          <span class="badge badge-primary badge-pill"><%= @train.carriages.seats_count(:economy, :side_top_seats) %></span>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
           Side bottom seats count:
-          <span class="badge badge-primary badge-pill"><%= @train.carriages.economy.map(&:side_bottom_seats).inject(:+) %></span>
+          <span class="badge badge-primary badge-pill"><%= @train.carriages.seats_count(:economy, :side_bottom_seats) %></span>
         </li>
       </ul>
     <% end %>
@@ -65,7 +65,7 @@
         <li class="list-group-item"><strong>SV Carriages:</strong></li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
           Bottom seats count:
-          <span class="badge badge-primary badge-pill"><%= @train.carriages.sv.map(&:bottom_seats).inject(:+) %></span>
+          <span class="badge badge-primary badge-pill"><%= @train.carriages.seats_count(:sv, :bottom_seats) %></span>
         </li>
       </ul>
     <% end %>
@@ -75,7 +75,7 @@
         <li class="list-group-item"><strong>Seat Carriages:</strong></li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
           Seat seats count:
-          <span class="badge badge-primary badge-pill"><%= @train.carriages.seat.map(&:seat_seats).inject(:+) %></span>
+          <span class="badge badge-primary badge-pill"><%= @train.carriages.seats_count(:seat, :seat_seats) %></span>
         </li>
       </ul>
     <% end %>
